# generate-opaque-structs

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: functions.cmake
ports/check-type-align/: portfile.cmake  vcpkg.json
source/: lib.h  macos.c  main.c  nt.c  posix.c  structs.h.in
source/structs/: macos.h  nt.h  posix.h
